--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <p><strong>Mapa 4:</strong> Gasoductos y plantas de licuefacción</p>
                 
                 <!-- Embedded HTML file -->
-                <iframe src="lng_routes/LNG_Routes.html" class="slide-iframe"></iframe>
+                <iframe src="lng_routes/s7.html" class="slide-iframe"></iframe>
                 
                 <p class="author-info">Fuente: Elaboración propia con datos de Esri, U.S. Federal Datasets, Sempra, México Pacific, INEGI, LNG Alliance</p>
             </div>
@@ -436,4 +436,5 @@
         });
     </script>
 </body>
+
 </html>
