--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         
         <!-- Slide 3: Production with Figura 2 and GIF -->
         <div class="slide" id="slide3">
-            <h1 class="slide-title">Producción de Gas Natural</h1>
+            <h1 class="slide-title">Producción de Gas Natural y transición energética </h1>
             <div class="slide-content">
                 <div class="two-column">
                     <div class="column">
@@ -545,3 +545,4 @@
     </script>
 </body>
 </html>
+
