--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         
         <!-- Slide 4: US Production and Permian Basin -->
         <div class="slide" id="slide4">
-            <h1 class="slide-title">Estados Unidos: Principal Productor Mundial</h1>
+            <h1 class="slide-title">Ubicación de principales  cuencas productoras</h1>
             <div class="slide-content">
                 <p>Hoy principal productor mundial de Gas Natural</p>
                 <p>Transición Energética</p>
@@ -545,4 +545,5 @@
     </script>
 </body>
 </html>
+
 
