--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         
         <!-- Slide 5: Panama Canal and Alternative Routes -->
         <div class="slide" id="slide5">
-            <h1 class="slide-title">Demanda Mundial y Rutas Alternativas</h1>
+            <h1 class="slide-title">Modelado de tráfico de buques 2024 Ruta Canal de Panamá</h1>
             <div class="slide-content">
                 <p>Demanda mundial se incrementa. Especialmente en Asia.</p>
                 <p><strong>Mapa 2:</strong> Tráfico de Buques Costa Este 2024</p>
@@ -545,5 +545,6 @@
     </script>
 </body>
 </html>
+
 
 
