--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         
         <!-- Slide 10: Gulf of California Biodiversity -->
         <div class="slide" id="slide10">
-            <h1 class="slide-title">Golfo de California: Patrimonio Mundial</h1>
+            <h1 class="slide-title">Golfo de California: Patrimonio Mundial Natural de la Humanidad</h1>
             <div class="slide-content">
                 <p>En 2005, la UNESCO inscribió a las Islas y Áreas Naturales Protegidas del Golfo de California como Patrimonio Mundial Natural de la Humanidad</p>
                 <p>Incluye nueve áreas naturales protegidas</p>
@@ -545,6 +545,7 @@
     </script>
 </body>
 </html>
+
 
 
 
