--- a/index.html
+++ b/index.html
@@ -501,11 +501,11 @@
                 <p>Documentación visual complementaria sobre los proyectos de gas natural</p>
                 
                 <div class="image-grid">
-                    <img src="images/s14.jpg" alt="Imagen adicional 1" class="grid-image" data-caption="Documentación visual complementaria - Imagen 1">
+                    <img src="images/s14.png" alt="Imagen adicional 1" class="grid-image" data-caption="Documentación visual complementaria - Imagen 1">
                     <img src="images/s15.jpg" alt="Imagen adicional 2" class="grid-image" data-caption="Documentación visual complementaria - Imagen 2">
                     <img src="images/s16.jpg" alt="Imagen adicional 3" class="grid-image" data-caption="Documentación visual complementaria - Imagen 3">
                     <img src="images/s17.jpg" alt="Imagen adicional 4" class="grid-image" data-caption="Documentación visual complementaria - Imagen 4">
-                    <img src="images/s18.jpg" alt="Imagen adicional 5" class="grid-image" data-caption="Documentación visual complementaria - Imagen 5">
+                    <img src="images/s18.png" alt="Imagen adicional 5" class="grid-image" data-caption="Documentación visual complementaria - Imagen 5">
                 </div>
                 
                 <p style="margin-top: 20px;">Haga clic en cualquier imagen para verla en pantalla completa</p>
@@ -641,3 +641,4 @@
     </script>
 </body>
 </html>
+
