--- a/index.html
+++ b/index.html
@@ -522,13 +522,15 @@
                 <p>06 Noviembre 2025</p>
                 
                 <!-- QR Code -->
-                <div style="margin-top: 30px;">
-                    <p>Acceda a esta presentación en línea:</p>
-                    <!-- Note: You'll need to generate and add a QR code image -->
-                    <!-- For now, using a placeholder div that you can replace with an actual QR code image -->
-                    <div class="qr-code" style="background-color: #2a2a4a; display: flex; justify-content: center; align-items: center; color: #4cc9f0; font-weight: bold;">
-                        [QR Code Image]<br>https://sochogeo2025-villarrica.netlify.app/
-                    </div>
+<div style="margin-top: 30px;">
+    <p>Acceda a esta presentación en línea:</p>
+    <img src="images/sochogeo2025-villarrica-QR.png" alt="QR Code para la presentación" class="qr-code">
+    <p class="presentation-link">
+        <a href="https://sochogeo2025-villarrica.netlify.app/" target="_blank" style="color: #4cc9f0;">
+            https://sochogeo2025-villarrica.netlify.app/
+        </a>
+    </p>
+</div>
                     <p class="presentation-link">
                         <a href="https://sochogeo2025-villarrica.netlify.app/" target="_blank" style="color: #4cc9f0;">
                             https://sochogeo2025-villarrica.netlify.app/
@@ -641,5 +643,6 @@
     </script>
 </body>
 </html>
+
 
 
