--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         
         <!-- Slide 9: Ecological Considerations -->
         <div class="slide" id="slide9">
-            <h1 class="slide-title">Consideraciones Ecológicas</h1>
+            <h1 class="slide-title">Modelo de ordenamiento Ecológico Marino del Golfo de Californias</h1>
             <div class="slide-content">
                 <p><strong>Mapa 5:</strong> Terminal de licuefacción Puerto Libertad, Sonora</p>
                 <img src="images/s11.jpg" alt="Mapa 5 - Puerto Libertad" class="slide-image" data-caption="Mapa 5: Terminal de licuefacción Puerto Libertad, Sonora">
@@ -725,3 +725,4 @@
     </script>
 </body>
 </html>
+
