--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         
         <!-- NEW SLIDE 11: Additional Images -->
         <div class="slide" id="slide11">
-            <h1 class="slide-title">Impactos y Consideraciones Adicionales</h1>
+            <h1 class="slide-title">Patrimonio Natural de la Humanidad</h1>
             <div class="slide-content">
                 <p>Documentación visual complementaria sobre los proyectos de gas natural</p>
                 
@@ -725,5 +725,6 @@
     </script>
 </body>
 </html>
+
 
 
