--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         
         <!-- Slide 8: Environmental Impact -->
         <div class="slide" id="slide8">
-            <h1 class="slide-title">Impacto Ambiental del Gas Natural</h1>
+            <h1 class="slide-title">Gas Natural (GWP). En el proceso de calentamiento global </h1>
             <div class="slide-content">
                 <p>¿Es realmente un energético de menor impacto para el proceso de cambio climático/calentamiento global?</p>
                 <p><strong>Figura 3:</strong> Gas Natural en la generación de Eléctrica. Contraste emisiones vs. Carbón</p>
@@ -725,6 +725,7 @@
     </script>
 </body>
 </html>
+
 
 
 
