--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         
         <!-- Slide 6: Alternative Route with Embedded HTML -->
         <div class="slide" id="slide6">
-            <h1 class="slide-title">México: una ruta alternativa factible</h1>
+            <h1 class="slide-title">En búsqueda de rutas alternativas</h1>
             <div class="slide-content">
                 <p>México: una ruta alternativa factible</p>
                 
@@ -725,6 +725,7 @@
     </script>
 </body>
 </html>
+
 
 
 
