--- a/index.html
+++ b/index.html
@@ -487,21 +487,27 @@
             <div class="slide-number">6</div>
         </div>
         
-        <!-- Slide 7: Infrastructure Projects -->
+                <!-- Slide 7: Infrastructure Projects - UPDATED HORIZONTAL LAYOUT -->
         <div class="slide" id="slide7">
             <h1 class="slide-title">Proyectos de Infraestructura para LNG</h1>
             <div class="slide-content">
-                <p>Noroeste de México</p>
-                <ul class="project-list">
-                    <li>Terminal de licuefacción Energía Costa Azul, localizada a 23 km al norte de Ensenada, Baja California</li>
-                    <li>Terminal de licuefacción Puerto Libertad, Sonora: Costa del Golfo de California</li>
-                    <li>Gasoducto Samalayuca-Sásabe (630 km)</li>
-                    <li>Gasoducto Sierra Madre (800 km)</li>
-                    <li>Gasoducto Sonora (834.3 km)</li>
-                </ul>
-                <p><strong>Mapa 4:</strong> Gasoductos y plantas de licuefacción</p>
-                <img src="images/s10.jpg" alt="Mapa 4 - Gasoductos y plantas de licuefacción" class="slide-image" data-caption="Mapa 4: Gasoductos y plantas de licuefacción">
-                <p class="author-info">Fuente: Elaboración propia con datos de Esri, U.S. Federal Datasets, Sempra, México Pacific, INEGI, LNG Alliance</p>
+                <div class="two-column">
+                    <div class="column">
+                        <p><strong>Noroeste de México</strong></p>
+                        <ul class="project-list">
+                            <li>Terminal de licuefacción Energía Costa Azul, localizada a 23 km al norte de Ensenada, Baja California</li>
+                            <li>Terminal de licuefacción Puerto Libertad, Sonora: Costa del Golfo de California</li>
+                            <li>Gasoducto Samalayuca-Sásabe (630 km)</li>
+                            <li>Gasoducto Sierra Madre (800 km)</li>
+                            <li>Gasoducto Sonora (834.3 km)</li>
+                        </ul>
+                        <p><strong>Mapa 4:</strong> Gasoductos y plantas de licuefacción</p>
+                        <p class="author-info">Fuente: Elaboración propia con datos de Esri, U.S. Federal Datasets, Sempra, México Pacific, INEGI, LNG Alliance</p>
+                    </div>
+                    <div class="column">
+                        <img src="images/s10.jpg" alt="Mapa 4 - Gasoductos y plantas de licuefacción" class="slide-image" data-caption="Mapa 4: Gasoductos y plantas de licuefacción">
+                    </div>
+                </div>
             </div>
             <div class="slide-number">7</div>
         </div>
@@ -725,6 +731,7 @@
     </script>
 </body>
 </html>
+
 
 
 
